--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "antd": "^5.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.17.0"
+    "react-router-dom": "^6.17.0",
+    "three": "^0.164.1"
   }
 }
